# one_person_dnd

./: .gitignore  LICENSE  README.md  api_config.example.ini  pyproject.toml  requirements.txt
.cursor/rules/: code-generate-rule.mdc
.github/workflows/: ci.yml
one_person_dnd/: launcher.py  paths.py
one_person_dnd/db/: __init__.py  conn.py  schema.py
one_person_dnd/engine/: parser.py  prompt_builder.py
one_person_dnd/llm/: client.py
one_person_dnd/web/: app.py  routes.py
one_person_dnd/web/templates/: base.html  saves.html  story_list.html  world_bible_list.html
src/one_person_dnd/: __main__.py  config.py  paths.py
src/one_person_dnd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/one_person_dnd/db/: schema.py
src/one_person_dnd/db/repos/: __init__.py  campaigns.py  character_sheets.py  plot_threads.py  sessions.py  state_change_requests.py  story_journal.py  summaries.py  turn_logs.py  world_bible.py
src/one_person_dnd/engine/: __init__.py  constants.py  guardrails.py  orchestrator.py  parser.py  prompt_builder.py
src/one_person_dnd/llm/: __init__.py  client.py
src/one_person_dnd/web/: app.py  routes.py
src/one_person_dnd/web/routes/: __init__.py  character.py  common.py  game.py  memory.py  saves.py  setup.py  threads.py
src/one_person_dnd/web/static/: style.css
src/one_person_dnd/web/templates/: base.html  game.html  index.html  setup.html  threads.html  world_bible_new.html
src/one_person_dnd/web/templates/partials/: character_panel.html  chat_turn.html  save_ok.html  (+5 more)
tests/: test_config.py  test_llm_client.py  test_parser.py
